<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity3">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img2" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img4" />

        </LinearLayout>
    </HorizontalScrollView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="484dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn1"
                style="@style/Widget.Material3.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:strokeColor="@color/orange"
                app:strokeWidth="3sp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"

                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:strokeColor="@color/orange"
                app:strokeWidth="3sp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:strokeColor="@color/orange"
                app:strokeWidth="3sp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:strokeColor="@color/orange"
                app:strokeWidth="3sp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:strokeColor="@color/orange"
                app:strokeWidth="3sp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:strokeColor="@color/orange"
                app:strokeWidth="3sp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:strokeColor="@color/orange"
                app:strokeWidth="3sp" />


            <Button
                android:id="@+id/nexttt"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/orange"
                android:text="Go to Home 🏠"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:strokeColor="@color/blue"
                app:strokeWidth="3sp" />






        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/nav" />
    </LinearLayout>
</LinearLayout>